crates/vize_patina/src/rules/vue/snapshots/vize_patina__rules__vue__sfc_element_order__tests__invalid_style_before_script.snap
---
source: crates/vize_patina/src/rules/vue/sfc_element_order.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "vue/sfc-element-order",
        severity: Warning,
        message: "<script> should come before <style>",
        start: 16,
        end: 39,
        help: Some(
            "Recommended order: <script> and <template> (either order) -> <style>",
        ),
        labels: [],
        fix: None,
    },
]
